...
        testID: 'reports-task-select-input',
      }}
      textInputProps={{
        testID: 'reports-task-select-input',
      }}
      touchableWrapperProps={{
        testID: 'reports-task-select-trigger',
      }}
      value={selectedTask?.id}
      useNativeAndroidPickerStyle={false}
      Icon={() => (
        <View className="pointer-events-none absolute right-3 top-1/2 -translate-y-1/2">
          <Text className="text-sm text-gray-400">▼</Text>
...
