...
        <Tabs.Screen
          name="index"
          options={createTabOptions('Home', 'tab-home', 'home-outline')}
        />
        <Tabs.Screen
          name="tasks/index"
          options={createTabOptions('Tasks', 'tab-tasks', 'list-outline')}
        />
        <Tabs.Screen
          name="reports/index"
          options={createTabOptions(
            'Reports',
            'tab-reports',
            'document-text-outline'
          )}
        />
        <Tabs.Screen
          name="chat/index"
          options={{
...
